--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,17 +18,14 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".FabActivity">
+        <activity android:name=".FabActivity"></activity>
 
-        </activity>
-        <activity android:name=".ButtonsActivity" >
+        <activity android:name=".ButtonsActivity" > </activity>
 
-        </activity>
     </application>
 
 </manifest>
